--- a/pom.xml
+++ b/pom.xml
@@ -80,13 +80,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>2.0.2.RELEASE</version>
+            <version>2.5.1</version>
         </dependency>
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.3.0</version>
         </dependency>
+       
     </dependencies>
 
     <build>
